syntax = "proto3";

package douyin;

option go_package = "./proto";

// 推送帧
message PushFrame {
  uint64 seqId = 1;
  uint64 logId = 2;
  uint64 service = 3;
  uint64 method = 4;
  repeated HeadersList headersList = 5;
  string payloadEncoding = 6;
  bytes payloadType = 7;
  bytes payload = 8;
}

message HeadersList {
  string key = 1;
  string value = 2;
}

// 响应
message Response {
  repeated Message messagesList = 1;
  string cursor = 2;
  uint64 fetchInterval = 3;
  uint64 now = 4;
  string internalExt = 5;
  uint32 fetchType = 6;
  map<string, string> routeParams = 7;
  uint64 heartbeatDuration = 8;
  bool needAck = 9;
  string pushServer = 10;
  string liveCursor = 11;
  bool historyNoMore = 12;
}

// 消息
message Message {
  string method = 1;
  bytes payload = 2;
  int64 msgId = 3;
  int32 msgType = 4;
  int64 offset = 5;
  bool needWrdsStore = 6;
  int64 wrdsVersion = 7;
  string wrdsSubBiz = 8;
}

// 用户
message User {
  uint64 id = 1;
  uint64 shortId = 2;
  string nickname = 3;
  uint32 gender = 4;
  string signature = 5;
  uint32 level = 6;
  uint64 birthday = 7;
  string telephone = 8;
  Image avatarThumb = 9;
  Image avatarMedium = 10;
  Image avatarLarge = 11;
  bool verified = 12;
  int32 experience = 13;
  string city = 14;
  int32 status = 15;
  uint64 createTime = 16;
  uint64 modifyTime = 17;
  uint32 secret = 18;
  string shareQrcodeUri = 19;
  uint32 incomeSharePercent = 20;
  Image badgeImageList = 21;
  FollowInfo followInfo = 22;
  PayGrade payGrade = 23;
  FansClub fansClub = 24;
  Border border = 25;
  string specialId = 26;
  Image avatarBorder = 27;
  Image medal = 28;
  repeated Image realTimeIcons = 29;
  Image newRealTimeIcons = 30;
  uint32 topVipNo = 31;
  UserAttr userAttr = 32;
  OwnRoom ownRoom = 33;
  uint32 payScore = 34;
  uint32 ticketCount = 35;
  AnchorInfo anchorInfo = 36;
  string linkMicStats = 37;
  string displayId = 38;
  bool withCommercePermission = 39;
  bool withFusionShopEntry = 40;
  uint32 verifyStatus = 41;
  string uniqueId = 42;
  string secUid = 43;
}

// 图片
message Image {
  repeated string urlList = 1;
  string uri = 2;
  uint64 height = 3;
  uint64 width = 4;
  string avgColor = 5;
  uint32 imageType = 6;
  string openWebUrl = 7;
  ImageContent content = 8;
  bool isAnimated = 9;
  ImageFormat flexImageFormat = 10;
  ImageFormat textImageFormat = 11;
}

message ImageContent {
  string name = 1;
  string fontColor = 2;
  uint64 level = 3;
  string alternativeText = 4;
}

message ImageFormat {
  string format = 1;
}

// 关注信息
message FollowInfo {
  uint64 followingCount = 1;
  uint64 followerCount = 2;
  uint64 followStatus = 3;
  uint64 pushStatus = 4;
  string remarkName = 5;
  bool followerCountUpdateTime = 6;
  bool followStatusUpdateTime = 7;
  bool pushStatusUpdateTime = 8;
}

// 付费等级
message PayGrade {
  uint64 totalDiamondCount = 1;
  bytes diamondIcon = 2;
  string name = 3;
  bytes icon = 4;
  uint64 nextName = 5;
  uint64 level = 6;
  bytes nextIcon = 7;
  uint64 nextDiamond = 8;
  uint64 nowDiamond = 9;
  uint64 thisGradeMinDiamond = 10;
  uint64 thisGradeMaxDiamond = 11;
  uint64 payDiamondBak = 12;
  string gradeDescribe = 13;
  repeated GradeIcon gradeIconList = 14;
  uint64 screenChatType = 15;
  Image imIcon = 16;
  Image imIconWithLevel = 17;
  Image liveIcon = 18;
  Image newImIconWithLevel = 19;
  Image newLiveIcon = 20;
  uint64 upgradeNeedConsume = 21;
  string nextPrivileges = 22;
  Image background = 23;
  Image backgroundBack = 24;
  uint64 score = 25;
  GradeIconList buffInfo = 26;
  string gradeBanner = 27;
  Image profileDialogBg = 28;
  Image profileDialogBgBack = 29;
}

message GradeIcon {
  uint64 iconDiamond = 1;
  bytes icon = 2;
  uint64 iconLevel = 3;
  uint64 levelStr = 4;
}

message GradeIconList {
  repeated GradeIcon gradeIconList = 1;
}

// 粉丝团
message FansClub {
  FansClubData data = 1;
  map<string, string> preferData = 2;
}

message FansClubData {
  string clubName = 1;
  uint32 level = 2;
  uint32 userFansClubStatus = 3;
  repeated Badge badgeList = 4;
  uint64 availableGiftIds = 5;
  uint64 anchorId = 6;
}

message Badge {
  Image icons = 1;
  string title = 2;
}

// 边框
message Border {
  Image icon = 1;
}

// 用户属性
message UserAttr {
  bool isAdmin = 1;
  bool isSuperAdmin = 2;
  bool isMuted = 3;
}

// 主播房间
message OwnRoom {
  repeated uint64 roomIds = 1;
  uint64 roomId = 2;
  uint64 roomIdStr = 3;
}

// 主播信息
message AnchorInfo {
  uint64 experienceCurrent = 1;
  uint64 experienceStart = 2;
  uint64 experienceNext = 3;
  uint64 anchorLevel = 4;
}

// 聊天消息
message ChatMessage {
  Common common = 1;
  User user = 2;
  string content = 3;
  bool visibleToSender = 4;
  Image backgroundImage = 5;
  string fullScreenTextColor = 6;
  Image backgroundImageV2 = 7;
  PublicAreaCommon publicAreaCommon = 8;
  Image giftImage = 9;
  uint64 agreeMsgId = 10;
  uint32 priorityLevel = 11;
  LandscapeAreaCommon landscapeAreaCommon = 12;
  uint64 eventTime = 13;
  bool sendReview = 14;
  bool fromIntercom = 15;
  bool intercomHideUserCard = 16;
  string chatBy = 17;
  uint32 individualChatPriority = 18;
  repeated RtfContent rtfContent = 19;
}

message Common {
  string method = 1;
  uint64 msgId = 2;
  uint64 roomId = 3;
  uint64 createTime = 4;
  uint32 monitor = 5;
  bool isShowMsg = 6;
  string describe = 7;
  uint64 foldType = 8;
  uint64 anchorFoldType = 9;
  uint64 priorityScore = 10;
  string logId = 11;
  string msgProcessFilterK = 12;
  string msgProcessFilterV = 13;
  User user = 14;
  uint64 roomUserSeq = 15;
  uint64 foldTypeForWeb = 16;
  uint64 anchorFoldTypeForWeb = 17;
  uint64 processAtSeiTimeMs = 18;
}

message PublicAreaCommon {
  Image userLabel = 1;
  string userConsumeInRoom = 2;
  Image userBadge = 3;
  string userBadgeText = 4;
}

message LandscapeAreaCommon {
  Image showDialogContent = 1;
  repeated Image showDialogContentList = 2;
  uint64 showDialogContentType = 3;
  Image landscapeBusiness = 4;
}

message RtfContent {
  string type = 1;
  string text = 2;
  string fontColor = 3;
  Image icon = 4;
  uint32 fontSize = 5;
  bool fontWeight = 6;
  string userId = 7;
  string userIdStr = 8;
}

// 礼物消息
message GiftMessage {
  Common common = 1;
  uint64 giftId = 2;
  uint64 fanTicketCount = 3;
  uint64 groupCount = 4;
  uint64 repeatCount = 5;
  uint64 comboCount = 6;
  User user = 7;
  User toUser = 8;
  uint32 repeatEnd = 9;
  uint64 textColor = 10;
  uint64 medalLevel = 11;
  uint64 giftType = 12;
  uint64 diamondCount = 13;
  string giftName = 14;
  GiftStruct gift = 15;
  string logId = 16;
  uint64 sendType = 17;
  PublicAreaCommon publicAreaCommon = 18;
  Image trayDisplayText = 19;
  uint64 bannedDisplayInfo = 20;
  GiftTrayInfo giftTrayInfo = 21;
  bool doodleTemplateInfo = 22;
  uint64 giftPanelInfo = 23;
  bool colorConfig = 24;
  GiftImageInfo giftImageInfo = 25;
}

message GiftStruct {
  Image icon = 1;
  string describe = 2;
  bool notify = 3;
  uint64 duration = 4;
  uint64 id = 5;
  GiftStruct forLinkmic = 6;
  bool doodle = 7;
  bool forFansclub = 8;
  bool combo = 9;
  uint32 type = 10;
  uint32 diamondCount = 11;
  bool isDisplayedOnPanel = 12;
  uint32 primaryEffectId = 13;
  Image giftLabelIcon = 14;
  string name = 15;
  string region = 16;
  Image manual = 17;
  bool forCustom = 18;
  repeated GiftColorInfo giftColorInfoList = 19;
}

message GiftColorInfo {
  string colorType = 1;
  uint32 color = 2;
  uint32 colorValue = 3;
}

message GiftTrayInfo {
  string giftSubType = 1;
}

message GiftImageInfo {
  string giftWords = 1;
}

// 点赞消息
message LikeMessage {
  Common common = 1;
  uint64 count = 2;
  uint64 total = 3;
  uint64 color = 4;
  User user = 5;
  Image icon = 6;
  string doubleClick = 7;
  string displayStyle = 8;
  string itemType = 9;
  string styleType = 10;
  uint64 msgStyle = 11;
}

// 成员消息（进入直播间）
message MemberMessage {
  Common common = 1;
  User user = 2;
  uint64 memberCount = 3;
  User operator = 4;
  bool isSetToAdmin = 5;
  bool isTopUser = 6;
  uint64 rankScore = 7;
  uint64 topUserNo = 8;
  uint64 enterType = 9;
  string action = 10;
  string actionDescription = 11;
  uint64 userId = 12;
  string userIdStr = 13;
  uint64 effectId = 14;
  string popStr = 15;
  string enterEffectConfig = 16;
  Image backgroundImage = 17;
  Image backgroundImageV2 = 18;
  string anchorDisplayText = 19;
  PublicAreaCommon publicAreaCommon = 20;
}

// 关注消息
message SocialMessage {
  Common common = 1;
  User user = 2;
  uint64 shareType = 3;
  uint64 action = 4;
  string shareTarget = 5;
  uint64 followCount = 6;
  PublicAreaCommon publicAreaCommon = 7;
}

// 房间用户序列消息
message RoomUserSeqMessage {
  Common common = 1;
  repeated RankItem ranks = 2;
  uint64 total = 3;
  string popStr = 4;
  repeated RankItem seats = 5;
  uint64 popularity = 6;
  uint64 totalUser = 7;
  string totalUserStr = 8;
  string totalStr = 9;
  string onlineUserForAnchor = 10;
  string totalPvForAnchor = 11;
}

message RankItem {
  User user = 1;
  uint64 score = 2;
  uint64 rank = 3;
  string scoreDisplay = 4;
}

// 房间统计消息
message RoomStatsMessage {
  Common common = 1;
  uint64 displayShort = 2;
  uint64 displayMiddle = 3;
  uint64 displayLong = 4;
  uint64 displayValue = 5;
  uint64 displayVersion = 6;
  uint64 incremental = 7;
  uint64 isHidden = 8;
  uint64 totalUser = 9;
  string totalUserStr = 10;
  string displayType = 11;
  string anchorDisplayValue = 12;
}

// 控制消息
message ControlMessage {
  Common common = 1;
  uint32 action = 2;
}

// 房间消息
message RoomMessage {
  Common common = 1;
  string content = 2;
  bool suppressed = 3;
  RoomMsgTypeEnum msgType = 4;
}

enum RoomMsgTypeEnum {
  ROOM_MSG_UNKNOWN = 0;
  ROOM_MSG_OFFICIAL = 1;
  ROOM_MSG_WELCOME = 2;
}
