package parser

import (
	"fmt"
	"strings"
)

// DouyinParser æŠ–éŸ³æ¶ˆæ¯è§£æå™¨
type DouyinParser struct {
	statistics Statistics
}

// Statistics ç»Ÿè®¡ä¿¡æ¯
type Statistics struct {
	TotalMessages int
	ChatCount     int
	GiftCount     int
	LikeCount     int
	MemberCount   int
	OnlineUsers   int
}

// NewDouyinParser åˆ›å»ºè§£æå™¨
func NewDouyinParser() *DouyinParser {
	return &DouyinParser{
		statistics: Statistics{},
	}
}

// ParseMessage è§£ææŠ–éŸ³æ¶ˆæ¯ï¼ˆä½¿ç”¨å®Œæ•´çš„ Protobuf é€»è¾‘ï¼‰
func (p *DouyinParser) ParseMessage(payloadData, url string) ([]map[string]interface{}, error) {
	// è°ƒç”¨ protobuf.go ä¸­çš„è§£æå‡½æ•°
	messages, err := ParseDouyinMessage(payloadData, url)
	if err != nil {
		return nil, err
	}

	// æ›´æ–°ç»Ÿè®¡
	for _, msg := range messages {
		p.statistics.TotalMessages++
		
		if msgType, ok := msg["messageType"].(string); ok {
			switch msgType {
			case "èŠå¤©æ¶ˆæ¯":
				p.statistics.ChatCount++
			case "ç¤¼ç‰©æ¶ˆæ¯":
				p.statistics.GiftCount++
			case "ç‚¹èµæ¶ˆæ¯":
				p.statistics.LikeCount++
			case "è¿›å…¥ç›´æ’­é—´":
				p.statistics.MemberCount++
			}
		}
	}

	return messages, nil
}

// FormatMessage æ ¼å¼åŒ–æ¶ˆæ¯ï¼ˆç”¨äºæ§åˆ¶å°è¾“å‡ºï¼‰
func (p *DouyinParser) FormatMessage(messages []map[string]interface{}) string {
	if len(messages) == 0 {
		return ""
	}

	var result []string
	for _, msg := range messages {
		formatted := p.formatSingleMessage(msg)
		if formatted != "" {
			result = append(result, formatted)
		}
	}

	return strings.Join(result, "\n\n")
}

// formatSingleMessage æ ¼å¼åŒ–å•æ¡æ¶ˆæ¯
func (p *DouyinParser) formatSingleMessage(msg map[string]interface{}) string {
	lines := []string{
		"â•”" + strings.Repeat("â•", 78) + "â•—",
		"â•‘ ğŸ¬ æŠ–éŸ³ç›´æ’­æ¶ˆæ¯",
		"â• " + strings.Repeat("â•", 78) + "â•£",
	}

	// æ¶ˆæ¯ç±»å‹
	if msgType, ok := msg["messageType"].(string); ok {
		lines = append(lines, fmt.Sprintf("â•‘ æ¶ˆæ¯ç±»å‹: %s", msgType))
	}

	// æ—¶é—´æˆ³
	if timestamp, ok := msg["timestamp"].(string); ok {
		lines = append(lines, fmt.Sprintf("â•‘ æ—¶é—´: %s", timestamp))
	}

	// æ ¹æ®æ¶ˆæ¯ç±»å‹æ·»åŠ è¯¦ç»†ä¿¡æ¯
	msgType, _ := msg["messageType"].(string)
	
	switch msgType {
	case "èŠå¤©æ¶ˆæ¯":
		if user, ok := msg["user"].(string); ok {
			lines = append(lines, fmt.Sprintf("â•‘ ç”¨æˆ·: %s", user))
		}
		if level, ok := msg["level"].(int32); ok {
			lines = append(lines, fmt.Sprintf("â•‘ ç­‰çº§: %d", level))
		}
		if content, ok := msg["content"].(string); ok {
			lines = append(lines, fmt.Sprintf("â•‘ å†…å®¹: %s", content))
		}

	case "ç¤¼ç‰©æ¶ˆæ¯":
		if user, ok := msg["user"].(string); ok {
			lines = append(lines, fmt.Sprintf("â•‘ ç”¨æˆ·: %s", user))
		}
		if giftName, ok := msg["giftName"].(string); ok {
			lines = append(lines, fmt.Sprintf("â•‘ ç¤¼ç‰©: %s", giftName))
		}
		if giftCount, ok := msg["giftCount"].(string); ok {
			lines = append(lines, fmt.Sprintf("â•‘ æ•°é‡: %s", giftCount))
		}
		if diamondCount, ok := msg["diamondCount"].(int32); ok {
			lines = append(lines, fmt.Sprintf("â•‘ ä»·å€¼: %d ğŸ’", diamondCount))
		}

	case "ç‚¹èµæ¶ˆæ¯":
		if user, ok := msg["user"].(string); ok {
			lines = append(lines, fmt.Sprintf("â•‘ ç”¨æˆ·: %s â¤ï¸", user))
		}
		if count, ok := msg["count"].(string); ok {
			lines = append(lines, fmt.Sprintf("â•‘ ç‚¹èµæ•°: %s", count))
		}

	case "è¿›å…¥ç›´æ’­é—´":
		if user, ok := msg["user"].(string); ok {
			lines = append(lines, fmt.Sprintf("â•‘ ç”¨æˆ·: %s", user))
		}
		if memberCount, ok := msg["memberCount"].(string); ok {
			lines = append(lines, fmt.Sprintf("â•‘ å½“å‰äººæ•°: %s", memberCount))
		}

	case "åœ¨çº¿äººæ•°":
		if total, ok := msg["total"].(string); ok {
			lines = append(lines, fmt.Sprintf("â•‘ åœ¨çº¿äººæ•°: %s ğŸ‘¥", total))
		}
		if totalUser, ok := msg["totalUser"].(string); ok {
			lines = append(lines, fmt.Sprintf("â•‘ ç´¯è®¡è§‚çœ‹: %s", totalUser))
		}

	case "ç›´æ’­é—´ç»Ÿè®¡":
		if displayMiddle, ok := msg["displayMiddle"].(string); ok {
			lines = append(lines, fmt.Sprintf("â•‘ åœ¨çº¿è§‚ä¼—: %s ğŸ‘¥", displayMiddle))
		}

	case "å…³æ³¨æ¶ˆæ¯":
		if user, ok := msg["user"].(string); ok {
			lines = append(lines, fmt.Sprintf("â•‘ ç”¨æˆ·: %s", user))
		}
		lines = append(lines, "â•‘ åŠ¨ä½œ: å…³æ³¨äº†ä¸»æ’­")

	default:
		if method, ok := msg["method"].(string); ok {
			lines = append(lines, fmt.Sprintf("â•‘ æ–¹æ³•: %s", method))
		}
	}

	lines = append(lines, "â•š"+strings.Repeat("â•", 78)+"â•")
	return strings.Join(lines, "\n")
}

// GetStatistics è·å–ç»Ÿè®¡ä¿¡æ¯
func (p *DouyinParser) GetStatistics() Statistics {
	return p.statistics
}

// ResetStatistics é‡ç½®ç»Ÿè®¡
func (p *DouyinParser) ResetStatistics() {
	p.statistics = Statistics{}
}

// FormatStatistics æ ¼å¼åŒ–ç»Ÿè®¡ä¿¡æ¯
func (p *DouyinParser) FormatStatistics() string {
	stats := p.GetStatistics()
	lines := []string{
		"â•”" + strings.Repeat("â•", 78) + "â•—",
		"â•‘ ğŸ“Š æŠ–éŸ³ç›´æ’­ç»Ÿè®¡",
		"â• " + strings.Repeat("â•", 78) + "â•£",
		fmt.Sprintf("â•‘ æ€»æ¶ˆæ¯æ•°: %d", stats.TotalMessages),
		fmt.Sprintf("â•‘ èŠå¤©æ¶ˆæ¯: %d", stats.ChatCount),
		fmt.Sprintf("â•‘ ç¤¼ç‰©æ¶ˆæ¯: %d", stats.GiftCount),
		fmt.Sprintf("â•‘ ç‚¹èµæ¶ˆæ¯: %d", stats.LikeCount),
		fmt.Sprintf("â•‘ è¿›å…¥ç›´æ’­é—´: %d", stats.MemberCount),
		fmt.Sprintf("â•‘ å½“å‰åœ¨çº¿: %d ğŸ‘¥", stats.OnlineUsers),
		"â•š" + strings.Repeat("â•", 78) + "â•",
	}
	return strings.Join(lines, "\n")
}
