package parser

import (
	"fmt"
	"strings"
	"time"

	generatedmsg "dy-live-monitor/internal/jwwsjlm/douyinLive/generated"
	newdouyin "dy-live-monitor/internal/jwwsjlm/douyinLive/generated/new_douyin"
	"google.golang.org/protobuf/encoding/protojson"
	"google.golang.org/protobuf/proto"
)

// ParsedProtoMessage è¡¨ç¤ºé€šè¿‡ protobuf è§£æåçš„ç›´æ’­æ¶ˆæ¯
type ParsedProtoMessage struct {
	Method      string
	Display     string
	Detail      map[string]interface{}
	Proto       proto.Message
	RawJSON     string
	RawPayload  []byte
	ReceivedAt  time.Time
	MessageID   string
	MessageType string
}

// ParseProtoMessage è§£æ protobuf æ¶ˆæ¯å¹¶æ ¼å¼åŒ–ä¸ºå¯å±•ç¤ºçš„æ•°æ®
func ParseProtoMessage(method string, payload []byte) (*ParsedProtoMessage, error) {
	instance, err := generatedmsg.GetMessageInstance(method)
	if err != nil {
		return nil, fmt.Errorf("æœªæ³¨å†Œçš„ protobuf æ¶ˆæ¯: %s: %w", method, err)
	}

	protoMsg, ok := instance.(proto.Message)
	if !ok {
		return nil, fmt.Errorf("æ¶ˆæ¯ %s æ— æ³•è½¬æ¢ä¸º proto.Message", method)
	}

	if err := proto.Unmarshal(payload, protoMsg); err != nil {
		return nil, fmt.Errorf("è§£ææ¶ˆæ¯ %s å¤±è´¥: %w", method, err)
	}

	display, detail := formatDisplay(method, protoMsg)
	rawJSON, _ := protojson.Marshal(protoMsg)

	return &ParsedProtoMessage{
		Method:      method,
		Display:     display,
		Detail:      detail,
		Proto:       protoMsg,
		RawJSON:     string(rawJSON),
		RawPayload:  payload,
		ReceivedAt:  time.Now(),
		MessageID:   fmt.Sprintf("%p-%d", protoMsg, time.Now().UnixNano()),
		MessageType: detail["messageType"].(string),
	}, nil
}

func formatDisplay(method string, message proto.Message) (string, map[string]interface{}) {
	detail := map[string]interface{}{
		"method":      method,
		"messageType": method,
	}

	switch msg := message.(type) {
	case *newdouyin.Webcast_Im_ChatMessage:
		user := safeNickname(msg.User)
		detail["messageType"] = "èŠå¤©æ¶ˆæ¯"
		detail["user"] = user
		detail["userId"] = msg.GetUser().GetId()
		detail["content"] = msg.GetContent()
		return fmt.Sprintf("ğŸ’¬ %s: %s", user, msg.GetContent()), detail

	case *newdouyin.Webcast_Im_GiftMessage:
		return formatGiftMessage(detail, msg)

	case *newdouyin.Webcast_Im_LikeMessage:
		user := safeNickname(msg.User)
		detail["messageType"] = "ç‚¹èµæ¶ˆæ¯"
		detail["user"] = user
		detail["count"] = msg.GetCount()
		detail["total"] = msg.GetTotal()
		return fmt.Sprintf("â¤ï¸ %s ç‚¹èµ %d æ¬¡ (æ€»è®¡ %d)", user, msg.GetCount(), msg.GetTotal()), detail

	case *newdouyin.Webcast_Im_MemberMessage:
		user := safeNickname(msg.User)
		detail["messageType"] = "è¿›åœºæ¶ˆæ¯"
		detail["user"] = user
		detail["memberCount"] = msg.GetMemberCount()
		return fmt.Sprintf("ğŸšª %s è¿›å…¥ç›´æ’­é—´ï¼Œå½“å‰äººæ•° %d", user, msg.GetMemberCount()), detail

	case *newdouyin.Webcast_Im_SocialMessage:
		user := safeNickname(msg.User)
		detail["messageType"] = "å…³æ³¨æ¶ˆæ¯"
		detail["user"] = user
		return fmt.Sprintf("â­ %s å…³æ³¨äº†ä¸»æ’­", user), detail

	default:
		raw, _ := protojson.Marshal(message)
		detail["messageType"] = method
		detail["payload"] = string(raw)
		return fmt.Sprintf("ğŸ“¦ %s (%T)", method, message), detail
	}
}

func formatGiftMessage(detail map[string]interface{}, msg *newdouyin.Webcast_Im_GiftMessage) (string, map[string]interface{}) {
	user := msg.GetUser()
	toUser := msg.GetToUser()
	gift := msg.GetGift()

	detail["messageType"] = "ç¤¼ç‰©æ¶ˆæ¯"
	detail["user"] = safeNickname(user)
	detail["userId"] = user.GetId()

	if toUser != nil {
		detail["toUser"] = safeNickname(toUser)
		detail["toUserId"] = toUser.GetId()
		detail["anchorId"] = toUser.GetId()
		detail["anchorName"] = safeNickname(toUser)
	}

	if gift != nil {
		detail["giftName"] = giftName(gift)
		detail["giftId"] = gift.GetId()
		detail["diamondCount"] = int(gift.GetDiamondCount())
	}

	detail["groupCount"] = msg.GetGroupCount()
	detail["repeatCount"] = msg.GetRepeatCount()
	detail["totalCount"] = msg.GetTotalCount()

	display := fmt.Sprintf("ğŸ %s é€å‡º %s x%d",
		safeNickname(user),
		giftName(gift),
		msg.GetGroupCount(),
	)

	if toUser != nil {
		display = fmt.Sprintf("%s -> %s", display, safeNickname(toUser))
	}

	return display, detail
}

func safeNickname(user *newdouyin.Webcast_Data_User) string {
	if user == nil {
		return "åŒ¿å"
	}
	if nick := strings.TrimSpace(user.GetNickname()); nick != "" {
		return nick
	}
	if user.GetDisplayId() != "" {
		return user.GetDisplayId()
	}
	return fmt.Sprintf("ç”¨æˆ·%d", user.GetId())
}

func giftName(gift *newdouyin.Webcast_Data_GiftStruct) string {
	if gift == nil {
		return "æœªçŸ¥ç¤¼ç‰©"
	}
	if name := strings.TrimSpace(gift.GetName()); name != "" {
		return name
	}
	return fmt.Sprintf("ç¤¼ç‰©%d", gift.GetId())
}
