/**
 * æŠ–éŸ³ç›´æ’­ WebSocket æ¶ˆæ¯è§£æå™¨
 * å‚è€ƒ: https://github.com/skmcj/dycast
 * 
 * è§£ææ¥è‡ª wss://webcast100-ws-web-hl.douyin.com çš„æ¶ˆæ¯
 * æ”¯æŒ Protobuf + GZIP å‹ç¼©æ ¼å¼
 */

const zlib = require('zlib');
const { promisify } = require('util');

const gunzip = promisify(zlib.gunzip);
const inflate = promisify(zlib.inflate);

class DouyinWSMessageParser {
  constructor() {
    // æ¶ˆæ¯ç±»å‹æ˜ å°„
    this.messageTypes = {
      'WebcastChatMessage': 'èŠå¤©æ¶ˆæ¯',
      'WebcastGiftMessage': 'ç¤¼ç‰©æ¶ˆæ¯',
      'WebcastLikeMessage': 'ç‚¹èµæ¶ˆæ¯',
      'WebcastMemberMessage': 'è¿›å…¥ç›´æ’­é—´',
      'WebcastSocialMessage': 'å…³æ³¨æ¶ˆæ¯',
      'WebcastRoomUserSeqMessage': 'åœ¨çº¿äººæ•°',
      'WebcastFansclubMessage': 'ç²‰ä¸å›¢æ¶ˆæ¯',
      'WebcastControlMessage': 'ç›´æ’­é—´æ§åˆ¶',
      'WebcastEmojiChatMessage': 'è¡¨æƒ…æ¶ˆæ¯',
      'WebcastRoomStatsMessage': 'ç›´æ’­é—´ç»Ÿè®¡',
      'WebcastRoomMessage': 'ç›´æ’­é—´æ¶ˆæ¯',
      'WebcastLinkMicBattle': 'è¿éº¦PK',
      'WebcastLinkMicArmies': 'è¿éº¦å†›å›¢'
    };

    this.statistics = {
      totalMessages: 0,
      chatCount: 0,
      giftCount: 0,
      likeCount: 0,
      memberCount: 0,
      onlineUsers: 0
    };
  }

  /**
   * æ£€æµ‹æ˜¯å¦ä¸ºæŠ–éŸ³ç›´æ’­ WebSocket URL
   */
  isDouyinLiveWS(url) {
    if (!url) return false;
    return url.includes('webcast') && 
           url.includes('douyin.com');
  }

  /**
   * è§£æ WebSocket æ¶ˆæ¯
   * @param {string} payloadData - WebSocketæ¶ˆæ¯å†…å®¹ï¼ˆå¯èƒ½æ˜¯base64ï¼‰
   * @param {string} url - WebSocket URL
   * @returns {Object|null} è§£æåçš„æ¶ˆæ¯å¯¹è±¡
   */
  async parseMessage(payloadData, url = '') {
    if (!payloadData) return null;
    
    try {
      // å°†payloadè½¬ä¸ºBuffer
      let buffer;
      if (typeof payloadData === 'string') {
        // å°è¯•base64è§£ç 
        try {
          buffer = Buffer.from(payloadData, 'base64');
        } catch (e) {
          buffer = Buffer.from(payloadData);
        }
      } else {
        buffer = Buffer.from(payloadData);
      }

      // è§£æå¤–å±‚ PushFrame
      const pushFrame = this.parsePushFrame(buffer);
      if (!pushFrame) {
        return null;
      }

      // è§£æå†…å±‚ Response
      const response = await this.parseResponse(pushFrame);
      if (!response) {
        return null;
      }

      // è§£æå…·ä½“æ¶ˆæ¯
      return this.parseMessages(response);
    } catch (e) {
      console.error('è§£ææ¶ˆæ¯å¤±è´¥:', e.message);
      return null;
    }
  }

  /**
   * è§£æ PushFrameï¼ˆå¤–å±‚ç»“æ„ï¼‰
   */
  parsePushFrame(buffer) {
    try {
      let offset = 0;
      const frame = {};

      while (offset < buffer.length) {
        // è¯»å–å­—æ®µç±»å‹å’Œç¼–å·
        const tag = buffer[offset++];
        if (!tag) break;

        const wireType = tag & 0x07;
        const fieldNumber = tag >> 3;

        if (wireType === 2) { // Length-delimited
          const length = this.readVarint(buffer, offset);
          offset += this.varintSize(length);

          const value = buffer.slice(offset, offset + length);
          offset += length;

          // å­—æ®µæ˜ å°„
          if (fieldNumber === 1) {
            frame.logId = value.readBigUInt64LE ? value.readBigUInt64LE(0) : 0;
          } else if (fieldNumber === 2) {
            frame.service = value.readUInt32LE(0);
          } else if (fieldNumber === 3) {
            frame.method = value.toString('utf8');
          } else if (fieldNumber === 4) {
            // è¿™æ˜¯é‡è¦çš„ headers_list
            frame.headersList = this.parseHeadersList(value);
          } else if (fieldNumber === 5) {
            // è¿™æ˜¯ payloadï¼ˆå‹ç¼©çš„Responseï¼‰
            frame.payloadBinary = value;
          }
        } else if (wireType === 0) { // Varint
          const value = this.readVarint(buffer, offset);
          offset += this.varintSize(value);
          
          if (fieldNumber === 2) {
            frame.service = value;
          }
        } else {
          // è·³è¿‡æœªçŸ¥å­—æ®µ
          break;
        }
      }

      return frame;
    } catch (e) {
      console.error('è§£æPushFrameå¤±è´¥:', e.message);
      return null;
    }
  }

  /**
   * è§£æ headers_list
   */
  parseHeadersList(buffer) {
    const headers = {};
    let offset = 0;

    while (offset < buffer.length) {
      const tag = buffer[offset++];
      if (!tag) break;

      const wireType = tag & 0x07;
      const fieldNumber = tag >> 3;

      if (wireType === 2 && fieldNumber === 3) {
        const length = this.readVarint(buffer, offset);
        offset += this.varintSize(length);

        const headerData = buffer.slice(offset, offset + length);
        offset += length;

        // è§£æå•ä¸ªheader
        const header = this.parseHeader(headerData);
        if (header && header.key) {
          headers[header.key] = header.value;
        }
      } else {
        break;
      }
    }

    return headers;
  }

  /**
   * è§£æå•ä¸ª header
   */
  parseHeader(buffer) {
    const header = {};
    let offset = 0;

    while (offset < buffer.length) {
      const tag = buffer[offset++];
      if (!tag) break;

      const wireType = tag & 0x07;
      const fieldNumber = tag >> 3;

      if (wireType === 2) {
        const length = this.readVarint(buffer, offset);
        offset += this.varintSize(length);

        const value = buffer.slice(offset, offset + length);
        offset += length;

        if (fieldNumber === 1) {
          header.key = value.toString('utf8');
        } else if (fieldNumber === 2) {
          header.value = value.toString('utf8');
        }
      } else {
        break;
      }
    }

    return header;
  }

  /**
   * è§£æ Responseï¼ˆè§£å‹åçš„å†…å±‚ç»“æ„ï¼‰
   */
  async parseResponse(frame) {
    try {
      if (!frame.payloadBinary) return null;

      // æ£€æŸ¥æ˜¯å¦éœ€è¦è§£å‹
      const compressType = frame.headersList?.['compress_type'];
      let payload = frame.payloadBinary;

      if (compressType === 'gzip') {
        try {
          payload = await gunzip(payload);
        } catch (e) {
          console.error('GZIPè§£å‹å¤±è´¥:', e.message);
          return null;
        }
      }

      // è§£æResponseç»“æ„
      const response = {};
      let offset = 0;

      while (offset < payload.length) {
        const tag = payload[offset++];
        if (!tag) break;

        const wireType = tag & 0x07;
        const fieldNumber = tag >> 3;

        if (wireType === 2) {
          const length = this.readVarint(payload, offset);
          offset += this.varintSize(length);

          const value = payload.slice(offset, offset + length);
          offset += length;

          if (fieldNumber === 1) {
            // messages_list
            if (!response.messagesList) {
              response.messagesList = [];
            }
            response.messagesList.push(value);
          }
        } else if (wireType === 0) {
          const value = this.readVarint(payload, offset);
          offset += this.varintSize(value);
        } else {
          break;
        }
      }

      return response;
    } catch (e) {
      console.error('è§£æResponseå¤±è´¥:', e.message);
      return null;
    }
  }

  /**
   * è§£æå…·ä½“æ¶ˆæ¯åˆ—è¡¨
   */
  parseMessages(response) {
    if (!response.messagesList || response.messagesList.length === 0) {
      return null;
    }

    const results = [];

    for (const msgBuffer of response.messagesList) {
      try {
        const message = this.parseMessage_inner(msgBuffer);
        if (message) {
          results.push(message);
        }
      } catch (e) {
        console.error('è§£æå•æ¡æ¶ˆæ¯å¤±è´¥:', e.message);
      }
    }

    return results.length > 0 ? results : null;
  }

  /**
   * è§£æå•æ¡æ¶ˆæ¯
   */
  parseMessage_inner(buffer) {
    const message = {};
    let offset = 0;

    while (offset < buffer.length) {
      const tag = buffer[offset++];
      if (!tag) break;

      const wireType = tag & 0x07;
      const fieldNumber = tag >> 3;

      if (wireType === 2) {
        const length = this.readVarint(buffer, offset);
        offset += this.varintSize(length);

        const value = buffer.slice(offset, offset + length);
        offset += length;

        if (fieldNumber === 1) {
          // method å­—æ®µ
          message.method = value.toString('utf8');
        } else if (fieldNumber === 2) {
          // payload å­—æ®µï¼ˆå…·ä½“æ¶ˆæ¯å†…å®¹ï¼‰
          message.payload = value;
        }
      } else if (wireType === 0) {
        const value = this.readVarint(buffer, offset);
        offset += this.varintSize(value);
      } else {
        break;
      }
    }

    // æ ¹æ®methodè§£æpayload
    if (message.method && message.payload) {
      return this.parseMessagePayload(message.method, message.payload);
    }

    return null;
  }

  /**
   * æ ¹æ®æ¶ˆæ¯ç±»å‹è§£æpayload
   */
  parseMessagePayload(method, payload) {
    this.statistics.totalMessages++;

    const result = {
      type: 'douyin_live',
      messageType: this.messageTypes[method] || method,
      method: method,
      timestamp: new Date().toISOString(),
      parsed: true
    };

    try {
      // æå–æ–‡æœ¬ä¿¡æ¯
      const texts = this.extractTexts(payload);

      // æ ¹æ®ä¸åŒæ¶ˆæ¯ç±»å‹æå–ç‰¹å®šå­—æ®µ
      if (method === 'WebcastChatMessage') {
        this.statistics.chatCount++;
        return {
          ...result,
          messageType: 'èŠå¤©æ¶ˆæ¯',
          user: texts[0] || 'åŒ¿åç”¨æˆ·',
          content: texts[1] || texts[texts.length - 1] || '',
          allTexts: texts
        };
      }

      if (method === 'WebcastGiftMessage') {
        this.statistics.giftCount++;
        return {
          ...result,
          messageType: 'ç¤¼ç‰©æ¶ˆæ¯',
          user: texts[0] || 'åŒ¿åç”¨æˆ·',
          giftName: texts.find(t => t.includes('ç¤¼ç‰©') || t.length < 10) || texts[1] || 'æœªçŸ¥ç¤¼ç‰©',
          allTexts: texts
        };
      }

      if (method === 'WebcastLikeMessage') {
        this.statistics.likeCount++;
        return {
          ...result,
          messageType: 'ç‚¹èµæ¶ˆæ¯',
          user: texts[0] || 'åŒ¿åç”¨æˆ·',
          allTexts: texts
        };
      }

      if (method === 'WebcastMemberMessage') {
        this.statistics.memberCount++;
        return {
          ...result,
          messageType: 'è¿›å…¥ç›´æ’­é—´',
          user: texts[0] || 'åŒ¿åç”¨æˆ·',
          allTexts: texts
        };
      }

      if (method === 'WebcastRoomUserSeqMessage') {
        // å°è¯•æå–åœ¨çº¿äººæ•°
        const numbers = this.extractNumbers(payload);
        if (numbers.length > 0) {
          this.statistics.onlineUsers = numbers[0];
        }
        return {
          ...result,
          messageType: 'åœ¨çº¿äººæ•°',
          onlineCount: this.statistics.onlineUsers,
          numbers: numbers
        };
      }

      if (method === 'WebcastSocialMessage') {
        return {
          ...result,
          messageType: 'å…³æ³¨æ¶ˆæ¯',
          user: texts[0] || 'åŒ¿åç”¨æˆ·',
          allTexts: texts
        };
      }

      // å…¶ä»–æ¶ˆæ¯ç±»å‹
      return {
        ...result,
        texts: texts
      };
    } catch (e) {
      return result;
    }
  }

  /**
   * ä»Bufferä¸­æå–æ–‡æœ¬
   */
  extractTexts(buffer) {
    const texts = [];
    const str = buffer.toString('utf8');
    
    // åŒ¹é…ä¸­æ–‡ã€è‹±æ–‡ã€æ•°å­—çš„è¿ç»­å­—ç¬¦ä¸²
    const regex = /[\u4e00-\u9fa5a-zA-Z0-9]{2,}/g;
    const matches = str.match(regex);
    
    if (matches) {
      const seen = new Set();
      for (const match of matches) {
        // è¿‡æ»¤æ‰å¤ªé•¿çš„ï¼ˆå¯èƒ½æ˜¯ä¹±ç ï¼‰å’Œé‡å¤çš„
        if (match.length >= 2 && match.length <= 50 && !seen.has(match)) {
          // è¿‡æ»¤æ‰çœ‹èµ·æ¥åƒIDçš„çº¯æ•°å­—
          if (!/^\d+$/.test(match) || match.length < 10) {
            texts.push(match);
            seen.add(match);
          }
        }
      }
    }
    
    return texts.slice(0, 20);
  }

  /**
   * ä»Bufferä¸­æå–æ•°å­—
   */
  extractNumbers(buffer) {
    const numbers = [];
    
    for (let i = 0; i < buffer.length - 4; i++) {
      if (buffer[i] < 0x80) {
        const num = buffer.readUInt32LE(i);
        if (num > 0 && num < 10000000) {
          numbers.push(num);
        }
      }
    }
    
    return numbers.slice(0, 5);
  }

  /**
   * è¯»å–Varint
   */
  readVarint(buffer, offset) {
    let result = 0;
    let shift = 0;

    for (let i = 0; i < 10; i++) {
      if (offset + i >= buffer.length) break;

      const byte = buffer[offset + i];
      result |= (byte & 0x7f) << shift;

      if ((byte & 0x80) === 0) {
        return result;
      }

      shift += 7;
    }

    return result;
  }

  /**
   * è®¡ç®—Varintå ç”¨çš„å­—èŠ‚æ•°
   */
  varintSize(value) {
    let size = 0;
    while (value > 0) {
      size++;
      value >>= 7;
    }
    return size || 1;
  }

  /**
   * æ ¼å¼åŒ–æ¶ˆæ¯ç”¨äºæ˜¾ç¤º
   */
  formatMessage(parsedMessages) {
    if (!parsedMessages) return null;

    // å¦‚æœæ˜¯æ•°ç»„ï¼Œæ ¼å¼åŒ–æ¯æ¡æ¶ˆæ¯
    if (Array.isArray(parsedMessages)) {
      return parsedMessages.map(msg => this.formatSingleMessage(msg)).filter(Boolean).join('\n\n');
    }

    return this.formatSingleMessage(parsedMessages);
  }

  /**
   * æ ¼å¼åŒ–å•æ¡æ¶ˆæ¯
   */
  formatSingleMessage(parsedMessage) {
    if (!parsedMessage) return null;

    const lines = [];
    lines.push(`â•”${'â•'.repeat(78)}â•—`);
    lines.push(`â•‘ ğŸ¬ æŠ–éŸ³ç›´æ’­æ¶ˆæ¯`);
    lines.push(`â• ${'â•'.repeat(78)}â•£`);
    lines.push(`â•‘ æ¶ˆæ¯ç±»å‹: ${parsedMessage.messageType}`);
    lines.push(`â•‘ æ—¶é—´: ${parsedMessage.timestamp}`);

    switch (parsedMessage.messageType) {
      case 'èŠå¤©æ¶ˆæ¯':
        lines.push(`â•‘ ç”¨æˆ·: ${parsedMessage.user}`);
        lines.push(`â•‘ å†…å®¹: ${parsedMessage.content}`);
        break;

      case 'ç¤¼ç‰©æ¶ˆæ¯':
        lines.push(`â•‘ ç”¨æˆ·: ${parsedMessage.user}`);
        lines.push(`â•‘ ç¤¼ç‰©: ${parsedMessage.giftName}`);
        break;

      case 'ç‚¹èµæ¶ˆæ¯':
        lines.push(`â•‘ ç”¨æˆ·: ${parsedMessage.user} â¤ï¸`);
        break;

      case 'è¿›å…¥ç›´æ’­é—´':
        lines.push(`â•‘ ç”¨æˆ·: ${parsedMessage.user}`);
        break;

      case 'åœ¨çº¿äººæ•°':
        lines.push(`â•‘ åœ¨çº¿äººæ•°: ${parsedMessage.onlineCount} ğŸ‘¥`);
        break;

      case 'å…³æ³¨æ¶ˆæ¯':
        lines.push(`â•‘ ç”¨æˆ·: ${parsedMessage.user}`);
        lines.push(`â•‘ åŠ¨ä½œ: å…³æ³¨äº†ä¸»æ’­`);
        break;

      default:
        if (parsedMessage.user) {
          lines.push(`â•‘ ç”¨æˆ·: ${parsedMessage.user}`);
        }
        if (parsedMessage.texts && parsedMessage.texts.length > 0) {
          lines.push(`â•‘ æå–ä¿¡æ¯: ${parsedMessage.texts.slice(0, 3).join(', ')}`);
        }
    }

    lines.push(`â•š${'â•'.repeat(78)}â•`);
    return lines.join('\n');
  }

  /**
   * è·å–ç»Ÿè®¡ä¿¡æ¯
   */
  getStatistics() {
    return {
      ...this.statistics,
      timestamp: new Date().toISOString()
    };
  }

  /**
   * é‡ç½®ç»Ÿè®¡ä¿¡æ¯
   */
  resetStatistics() {
    this.statistics = {
      totalMessages: 0,
      chatCount: 0,
      giftCount: 0,
      likeCount: 0,
      memberCount: 0,
      onlineUsers: 0
    };
  }

  /**
   * æ ¼å¼åŒ–ç»Ÿè®¡ä¿¡æ¯
   */
  formatStatistics() {
    const stats = this.getStatistics();
    const lines = [];
    lines.push(`â•”${'â•'.repeat(78)}â•—`);
    lines.push(`â•‘ ğŸ“Š æŠ–éŸ³ç›´æ’­ç»Ÿè®¡`);
    lines.push(`â• ${'â•'.repeat(78)}â•£`);
    lines.push(`â•‘ æ€»æ¶ˆæ¯æ•°: ${stats.totalMessages}`);
    lines.push(`â•‘ èŠå¤©æ¶ˆæ¯: ${stats.chatCount}`);
    lines.push(`â•‘ ç¤¼ç‰©æ¶ˆæ¯: ${stats.giftCount}`);
    lines.push(`â•‘ ç‚¹èµæ¶ˆæ¯: ${stats.likeCount}`);
    lines.push(`â•‘ è¿›å…¥ç›´æ’­é—´: ${stats.memberCount}`);
    lines.push(`â•‘ å½“å‰åœ¨çº¿: ${stats.onlineUsers} ğŸ‘¥`);
    lines.push(`â•‘ æ›´æ–°æ—¶é—´: ${stats.timestamp}`);
    lines.push(`â•š${'â•'.repeat(78)}â•`);
    return lines.join('\n');
  }
}

// å¯¼å‡ºå•ä¾‹
module.exports = new DouyinWSMessageParser();
